# Jikoku

./: .gitignore  404.html  README.md  index.html  pyproject.toml
.github/workflows/: release.yml  tests.yml
API reference/: index.html
Example 1: Keiyo Line Local/: index.html
Example 2: SCNF Line/: index.html
docs/: mkdocs.yml
docs/docs/: API reference.md  index.md
example/jr_east_keiyo_line_local/: parser.py
example/jr_east_keiyo_line_local/pages/: keiyoline_from_soga.html  keiyoline_from_tokyo.html
jikoku/: .models.py.kate-swp  jreast.py  models.py  scheduler.py  time.py  utils.py  visuals.py
search/: search_index.json
tests/: test_linter.py  test_models.py  test_scheduler_basic.py  test_timepoint.py
