[tool.poetry]
name = "jikoku"
version = "0.0.1"
description = "Python utility to generate working timetables from general schedule data."
authors = ["Anton L <antonl@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.2.6"
mkdocstrings = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
